# disk-dlmalloc

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/src/: lib.rs
src/: dlmalloc.rs  lib.rs  sys.rs
tests/: smoke.rs
