[package]
name = "disk-dlmalloc"
version = "0.1.0"
authors = ["Anand Aiyer <aaiyer@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/aaiyer/disk-dlmalloc"
homepage = "https://github.com/aaiyer/disk-dlmalloc"
documentation = "https://docs.rs/disk-dlmalloc"
description = """
A fork of [dlmalloc-rs] backed by a memory-mapped file, enabling support for datasets exceeding available RAM.
"""
edition.workspace = true

[workspace]
members = ['fuzz']

[workspace.package]
edition = '2021'

[package.metadata.docs.rs]
features = ['global']

[lib]
doctest = false

[dependencies]
libc = "0.2"
memmap2 = "0.9"

[dev-dependencies]
arbitrary = "1.3"
rand = { version = "0.8", features = ['small_rng'] }
tempfile = "3.16"
anyhow = "1.0"

[profile.release]
debug-assertions = true

[features]
# Enable very expensive debug checks in this crate
debug = []
