[package]
name = "disk-dlmalloc-fuzz"
version = "0.0.1"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.3"
disk-dlmalloc = { path = '..' }
libfuzzer-sys = "0.4"
tempfile = "3.16"
anyhow = "1.0"

[[bin]]
name = "alloc"
path = "fuzz_targets/alloc.rs"
test = false
bench = false
